# CH-Bench

./: .gitignore  README.md  pyproject.toml
bench/: __init__.py  cli.py  injection.py  report.py
bench/adapters/: __init__.py  _http.py  ch.py  ck.py  gbrain.py  mem0.py  mock.py  supermemory.py
bench/core/: __init__.py  adapter.py  judge.py  runner.py  suite.py  types.py
bench/metrics/: __init__.py  retrieval.py  stats.py
bench/suites/: __init__.py  contextheavy.py  locomo.py  longmemeval.py
datasets/contextheavy/: developer.json  founder.json  pm.json  researcher.json  writer.json
datasets/injection/: core.json
docs/: COMPETITIVE_ANALYSIS.md  P16_RESULTS.md
docs/research/: ARCHITECTURE_REVIEW.md  CORRECTED_COMPARISON.md  INJECTION_RESULTS.md  LOCOMO_COMPARISON.md  LOCOMO_RETRIEVAL.md  P2_RETRIEVAL.md  P3_LATENCY.md  P4_DYNAMICS.md  STRESS_BASELINE.md  USER_RESEARCH.md  USE_CASES.md
results/p16/: COMPARISON.md  ch.json  ck.json  gbrain.json  mem0.json  mock.json  supermemory.json
scripts/: compare.py  export_table.py  fetch_datasets.sh  run_locomo.sh  significance.py
tests/: test_smoke.py
